fix: weird white line on firefox

--- a/src/components/LandingScreen/Prizes/Prizes.css
+++ b/src/components/LandingScreen/Prizes/Prizes.css
@@ -1,5 +1,5 @@
 .prizes-div {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   display: flex;
   flex-direction: column;
